--- a/docker-compose-build.yml
+++ b/docker-compose-build.yml
@@ -1,18 +1,20 @@
 version: "2"
 services:
   varnish:
-    image: meanbee/magento2-varnish:latest
+    build:
+      context: varnish/
     environment:
-      - VIRTUAL_HOST=localhost
+      - VIRTUAL_HOST=magento2.docker
       - VIRTUAL_PORT=80
       - HTTPS_METHOD=noredirect
     ports:
-      - 80:80
+      - 80
     links:
       - web
 
   web:
-    image: meanbee/magento2-nginx:1.9
+    build:
+      context: nginx/
     ports:
       - 80
     links:
@@ -29,7 +31,8 @@ services:
 
   fpm:
     hostname: fpm.magento2.docker
-    image: meanbee/magento2-php:7.0-fpm
+    build:
+      context: 7.0-fpm/
     ports:
       - 9000
     links:
@@ -50,11 +53,11 @@ services:
       - MYSQL_DATABASE=magento2
       - MYSQL_USER=magento2
       - MYSQL_PASSWORD=magento2
-      - TERM=meh
 
   cli:
     hostname: cli.magento2.docker
-    image: meanbee/magento2-php:7.0-cli
+    build:
+      context: 7.0-cli/
     links:
       - db
     volumes:
@@ -70,7 +73,7 @@ services:
       - M2SETUP_DB_NAME=magento2
       - M2SETUP_DB_USER=magento2
       - M2SETUP_DB_PASSWORD=magento2
-      - M2SETUP_BASE_URL=http://34.87.11.149/
+      - M2SETUP_BASE_URL=http://magento2.docker/
       # - M2SETUP_SECURE_BASE_URL=https://magento2.docker/
       - M2SETUP_BACKEND_FRONTNAME=admin
       - M2SETUP_ADMIN_FIRSTNAME=Admin
@@ -82,11 +85,10 @@ services:
       # - M2SETUP_USE_SAMPLE_DATA=true
 
   cron:
-    image: meanbee/magento2-php:7.0-cli
+    build:
+      context: 7.0-cli/
     hostname: magento2-cron.docker
     command: run-cron
-    env_file:
-      - ./global.env    
     environment:
       - ENABLE_SENDMAIL=true
     volumes_from:
