--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,96 +1,105 @@
-version: '3'
+version: "2"
 services:
-  nginx:
-    image: nghviet/ecom_nginx
+  varnish:
+    image: meanbee/magento2-varnish:latest
+    environment:
+      - VIRTUAL_HOST=localhost
+      - VIRTUAL_PORT=80
+      - HTTPS_METHOD=noredirect
     ports:
-      - 80:8000
-    tty: true
+      - 80:80
     links:
-      - phpfpm
-      - redis:cache
-    volumes:
-      - ./src/app_data1:/var/www/html
-      - ./src/sock_data1:/sock
-      - ./src/nginx_log1:/var/log/nginx
-    networks:
-      - magento
+      - web
 
-  phpfpm:
-    image: nghviet/ecom_phpfpm
+  web:
+    image: meanbee/magento2-nginx:1.9
+    ports:
+      - 80
     links:
-      - db1
-    volumes:
-      - ./src/app_data1:/var/www/html
-      - ./src/phpfpm_log1:/var/log
-      - ./src/sock_data1:/sock
-    networks:
-      - magento
+      - fpm
+      - db
+    volumes_from:
+      - appdata
+    env_file:
+      - ./global.env
+    #environment:
+      #- VIRTUAL_HOST=magento2.docker
+      #- VIRTUAL_PORT=80
+      #- HTTPS_METHOD=noredirect
 
-  redis:
-    image: redis:${REDIS_VERSION}
-    restart: on-failure:5
+  fpm:
+    hostname: fpm.magento2.docker
+    image: meanbee/magento2-php:7.0-fpm
+    ports:
+      - 9000
+    links:
+      - db
+    volumes_from:
+      - appdata
+    env_file:
+      - ./global.env
+
+  db:
+    image: mariadb:10
+    ports:
+      - 3306
+    volumes_from:
+      - dbdata
+    environment:
+      - MYSQL_ROOT_PASSWORD=magento2
+      - MYSQL_DATABASE=magento2
+      - MYSQL_USER=magento2
+      - MYSQL_PASSWORD=magento2
+      - TERM=meh
+
+  cli:
+    hostname: cli.magento2.docker
+    image: meanbee/magento2-php:7.0-cli
+    links:
+      - db
     volumes:
-      - ./src/redis_data1:/data
-    expose:
-      - 6379
-    networks:
-      - magento
+      - ~/.composer/cache:/root/.composer/cache
+    volumes_from:
+      - appdata
+    env_file:
+      - ./global.env
+      - ./composer.env
+    environment:
+      - M2SETUP_INSTALL_DB=true
+      - M2SETUP_DB_HOST=db
+      - M2SETUP_DB_NAME=magento2
+      - M2SETUP_DB_USER=magento2
+      - M2SETUP_DB_PASSWORD=magento2
+      - M2SETUP_BASE_URL=http://34.87.185.241/
+      # - M2SETUP_SECURE_BASE_URL=https://magento2.docker/
+      - M2SETUP_BACKEND_FRONTNAME=admin
+      - M2SETUP_ADMIN_FIRSTNAME=Admin
+      - M2SETUP_ADMIN_LASTNAME=User
+      - M2SETUP_ADMIN_EMAIL=dummy@gmail.com
+      - M2SETUP_ADMIN_USER=admin
+      - M2SETUP_ADMIN_PASSWORD=password1
+      - M2SETUP_VERSION=2.1.*
+      # - M2SETUP_USE_SAMPLE_DATA=true
 
   cron:
-    image: nghviet/ecom_cron
-    user: root
-    tty: true
+    image: meanbee/magento2-php:7.0-cli
+    hostname: magento2-cron.docker
+    command: run-cron
+    env_file:
+      - ./global.env    
+    environment:
+      - ENABLE_SENDMAIL=true
+    volumes_from:
+      - appdata
     links:
-      - db1
-      - elasticsearch1
-      - rabbitmq
+      - db
+
+  appdata:
+    image: tianon/true
     volumes:
-      - ./src/app_data1:/var/www/html
-      - ./src/sock_data1:/sock
-    networks:
-      - magento
+      - ./magento:/var/www/magento
 
-  db1:
-    image: mysql:${MYSQL_VERSION}
-    environment:
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-      - MYSQL_DATABASE=${MYSQL_DATABASE}
-      - MYSQL_USER=${MYSQL_USER}
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+  dbdata:
+    image: tianon/true
     volumes:
-      - ./src/mysql_data1:/var/lib/mysql
-      - ./src/mysql_log1:/var/log/mysql
-    ports:
-      - 13306:3306
-    networks:
-      - magento
-
-  elasticsearch1:
-    image: elasticsearch:${ELASTICSEARCH_VERSION}
-    tty: true
-    environment:
-      - discovery.type=single-node
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    volumes:
-      - ./src/es_data1:/usr/share/elasticsearch/data
-      - ./src/es_log1:/var/log/elasticsearch
-    networks:
-      - magento
-
-  rabbitmq:
-    image: rabbitmq:${RABBITMQ_VERSION}
-    environment:
-      - RABBITMQ_DEFAULT_USER=${RABBITMQ_DEFAULT_USER}
-      - RABBITMQ_DEFAULT_PASS=${RABBITMQ_DEFAULT_PASS}
-    ports:
-      - 15672:15672
-      - 5672:5672
-    networks:
-      - magento
-
-networks:
-  magento:
-    driver: bridge
+      - /var/lib/mysql
